# SmartGuitarPedal

./: CMakeLists.txt  README.md  aax_builds.sh  mac_builds.sh  validate.sh  win_builds.sh
.github/workflows/: cmake.yml
SmartPedal/: SmartPedal.jucer
SmartPedal/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResonantLowpassFilter.h
installers/linux/: build_deb.sh
installers/mac/: Intro.txt  SmartPedal.pkgproj  build_mac_installer.sh
installers/windows/: SmartPedal_Install_Script.iss  build_win_installer.sh
models/: bluesJr_fullD2.json  ts9_fullD.json
resources/: CMakeLists.txt
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveNetLoader.cpp  WaveNetLoader.h  myLookAndFeel.cpp
